# omega-prime

./: .coveragerc  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  tutorial.ipynb  tutorial_locator.ipynb  tutorial_metrics.ipynb
.github/workflows/: docs.yml  main.yml  release.yml
api/: index.html
cli/: index.html
docs/: README.md  api.md  cli.md  index.md  library.md  omega_prime_specification.md
docs/map_segmentation/: map_segmentation.md
docs/notebooks/: tutorial.ipynb  tutorial_locator.ipynb  tutorial_metrics.ipynb  tutorial_projections.ipynb
example_files/: README.md  acc-test.osi  highway_merge.osi  mapping.json  osi_centerline_example.mcap  pedestrian.osi
map_segmentation/map_segmentation/: index.html
notebooks/tutorial/: index.html
notebooks/tutorial_locator/: index.html
notebooks/tutorial_map/: index.html
notebooks/tutorial_metrics/: index.html
notebooks/tutorial_projections/: index.html
omega_format/: __init__.py  cli.py  legacy_adaptions.py  locator.py  map.py  recording.py
omega_format/asam_odr/: logger.py  odr_map.py
omega_format/asam_odr/opendriveconverter/: converter.py
omega_format/asam_odr/opendriveconverter/elements/: __init__.py  centerLinePoints.py  junction.py  lane.py  polyline.py  road.py
omega_format/asam_odr/opendriveparser/: parser.py
omega_prime/: __init__.py  cli.py  locator.py  map.py  map_lanelet.py  map_odr.py  mapodrsegmentation.py  maposicenterlinesegmentation.py  mapsegment.py  metrics.py  recording.py  schemas.py  types.py
omega_prime/asam_odr/: odr_map.py
omega_prime/asam_odr/opendriveconverter/: converter.py
omega_prime/asam_odr/opendriveconverter/elements/: road.py
omega_prime/asam_odr/opendriveparser/: parser.py
omega_prime/converters/: __init__.py  converter.py  lxd.py
omega_prime/metrics/: __init__.py  metric.py  metric_dependencies.py  metric_manager.py
omega_prime/metrics/analysis/: __init__.py  curvilinear_projection.py  distance_traveled.py  predicted_timegaps.py  timegaps.py  ttc_and_thw.py  vel.py
omega_prime/metrics/qualification/: __init__.py  attribute_completeness.py  class_completeness.py  common.py  data_format_consistency.py  duplicate_record_rate.py  english_syntax.py  non_default_attr_accuracy.py  object_type_coverage.py  record_completeness.py  target_area_coverage.py  temporal_completeness.py  temporal_coverage.py
omega_prime/metrics/qualification/cli/: common.py  (+11 more)
omega_prime/qualification/: attribute_completeness.py  class_completeness.py  common.py  duplicate_record_rate.py  non_default_attr_accuracy.py  object_type_coverage.py  record_completeness.py  target_area_coverage.py  temporal_completeness.py  temporal_coverage.py
omega_prime_specification/: index.html
search/: search_index.json
tests/: conftest.py  test_esmini_examples.py  test_mapodrsegmentation.py  test_maposisegmentation.py  test_mapsegment.py  test_metrics.py  test_projection.py  test_recording.py
tests/cli/: test_cli.py
tests/files/: alks_cut-in.osi
tests/metrics/: conftest.py  test_call_magic.py  test_compute_lazy.py  test_decorator.py  test_get_err_msg.py  test_init.py  test_metric_dependencies.py
tests/metrics/analysis/: conftest.py  test_curvilinear_projection.py  test_distance_traveled.py  test_predicted_timegaps.py  test_timegaps.py  test_ttc_and_thw.py  test_vel.py
tests/metrics/qualification/: conftest.py  test_attribute_completeness.py  test_common.py  test_data_format_consistency.py  test_duplicate_record_rate.py  test_english_syntax.py  test_object_type_coverage.py  test_record_completeness.py  test_temporal_completeness.py  test_temporal_coverage.py
tests/qualification/: conftest.py  test_attribute_completeness.py  test_class_completeness.py  test_common.py  test_duplicate_record_rate.py  test_non_default_attr_accuracy.py  test_object_type_coverage.py  test_record_completeness.py  test_target_area_coverage.py  test_temporal_completeness.py  test_temporal_coverage.py
tests/qualification/class_completeness/: test_class_completeness.py  test_role_completeness.py
tests/qualification/non_default_attr_accuracy/: test_custom_columns_missing.py  test_custom_columns_outside_omega_prime.py  test_with_omega_prime_schema.py
tests/qualification/target_area_coverage/: test_target_area_coverage.py
tools/ros2_conversion/: Dockerfile  README.md  object_list_to_omega_prime.py
tools/ros2_unbag/: Dockerfile  README.md  object_list_to_omega_prime.py  unbag-omega-prime.sh
(+38 files in other folders)
