[build-system]
requires = ["setuptools", "setuptools-scm", "ruff"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omega_format"]


[project]
name = "omega_format"
authors = [
    {name = "ika - RWTH Aachen", email = "michael.schuldes@ika.rwth-aachen.de"},
]
description = "omega_format"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["one", "two"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'shapely',
    'pandas',
    'scipy',
    'xarray',
    'numpy',
    'typer',
    'pandera',
    'lxml',
    'matplotlib',
    'StrEnum',
    'networkx',
    'betterosi'
    
]
version = "0.1"

[project.optional-dependencies]
test = ['ruff', 'pdoc3', 'pytest', 'pytest-sugar', 'pytest-env','pytest-cov','pytest-progress', 'nbval','ipywidgets']

[project.scripts]
omega_format = "omega_format.cli:app"

[tool.ruff]
lint.ignore = ["E741", "E701", "E501"]
target-version = "py311"
line-length = 120
lint.select = [
    "F401",  # Unused imports
    "F841",  # Unused local variables
    "F821",  # Undefined names
    "E501",  # Line length violations

    "SIM101", # Simplify unnecessary if-else blocks
    "SIM102", # Simplify return or yield statements
    "SIM103", # Simplify list/set/dict comprehensions

    "UP",

    "I",
]
lint.isort.combine-as-imports = true

[tool.licensecheck]
# run `pip install licensecheck` and `licensecheck`
using = "PEP631"
ignore_licenses = ["mpl"]
ignore_packages = [
    "tzdata", "xarray" # APACHE SOFTWARE LICENSE
]   
zero = true

[tool.pytest.ini_options]
addopts = "-ra --junitxml=report.xml --nbval"
testpaths = [
    "tests",
    "tutorial.ipynb",
]
log_cli = true
